force-app/main/default/objects/Funder__c/Funder__c.object-meta.xml
<CustomObject>
    <label>Funder</label>
    <nameField>
        <label>Funder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>