force-app/main/default/objects/Funder__c/fields/Annual_Class_target_FY17__c.field-meta.xml
<CustomField>
    <fullName>Annual_Class_target_FY17__c</fullName>
    <label>Annual Class target FY17</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>