force-app/main/default/objects/Funder__c/fields/Annual_Enrollment_target_FY17__c.field-meta.xml
<CustomField>
    <fullName>Annual_Enrollment_target_FY17__c</fullName>
    <label>Annual Enrollment target FY17</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>